--- a/task-demo/src/main/resources/application.yml
+++ b/task-demo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   mail:
-    host: mail.oristartech.com # smtp.qq.com
-    username: laser@oristartech.com # 893577263@qq.com
-    password: laser@123 # iwyowswlhpbzbchi
+    host: smtp.qq.com
+    username: xxx
+    password: xxx
     properties:
       mail.smtp.ssl.enable: true
